--- a/fkactor/Cargo.toml
+++ b/fkactor/Cargo.toml
@@ -16,6 +16,7 @@ async-trait = "^0.1.30"
 #dashmap = "^1.2.1"
 #env_logger = "^0.7.1"
 #failure = "*"
+futures = "^0.3.1"
 #iovec = "0.1"
 #itoa = "0.4.1"
 #hex = "*"
@@ -29,17 +30,9 @@ async-trait = "^0.1.30"
 serde = { version = "~1.0.92", features = ["derive", "rc"] }
 #serde_json = "~1.0.39"
 thiserror = "1.0"
-tokio = { version = "~0.2.6", default-features = false, features = ["full"] }
+tokio = { version = "^1.2.0", default-features = false, features = ["full"] }
 #tokio-util = { version = "~0.2.0", features = ["full"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 #want = "0.3"
 #warp = "~0.2.1"
-
-[dependencies.futures]
-features = ["compat"]
-version = "0.3.1"
-
-[dependencies.futures-util]
-features = ["compat"]
-version = "0.3.1"
 
